[package]
name = "rcord"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = { version = "0.17.3", features = ["native-tls"] }
native-tls = "0.2.11"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
anyhow = "1.0.66"
rand = "0.8.5"
bitflags = "1.3.2"
